# generativeai-handson

./: .gitignore  README.md  evaluate.py  evaluation_set.py  pyproject.toml  rag.py
utils/: documents.py
