[project]
name = "genai-handson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.61",
    "langchain-google-vertexai>=2.0.24",
    "langgraph>=0.4.7",
    "lxml>=5.4.0",
    "ragas>=0.2.15",
    "rapidfuzz>=3.13.0",
]
